# django-polars

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: format.yml  lint.yml  test.yml
django_polars/: io.py
src/django_polars/: __init__.py
tests/: models.py  settings.py  test_io.py
